Done cat and tribute pages using css

--- a/Responsive websites/css/Survey Form/survey.html
+++ b/Responsive websites/css/Survey Form/survey.html
@@ -11,7 +11,7 @@
     <form id="survey-form">
       <fieldset><label id="name-label">Name <input id="name" type="text" required placeholder="Enter your name"/>
         </label>
-        <label id="email-label">Email <input id="email" type="email" required/placeholder="Enter your email"></label>
+        <label id="email-label">Email <input id="email" type="email" required placeholder="Enter your email"/></label>
         <label id="number-label">Age <input id="number" type="number" min="1" max="2" placeholder="Enter your age"/>
         </label>
 
